--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="facebook_app_id">265383251185172</string>
     <string name="fb_login_protocol_scheme">fb265383251185172</string>
 
-    <string name="com.twitter.sdk.android.CONSUMER_KEY">0lY6xdMc8l3Bgkdep8DvfPxe4</string>
-    <string name="com.twitter.sdk.android.CONSUMER_SECRET">2Uov8wp8sQWccy1oRRes7Q3VgWfsTE1tokYHblse9TTaF0BW1b</string>
+   <!-- <string name="com.twitter.sdk.android.CONSUMER_KEY">0lY6xdMc8l3Bgkdep8DvfPxe4</string>
+    <string name="com.twitter.sdk.android.CONSUMER_SECRET">2Uov8wp8sQWccy1oRRes7Q3VgWfsTE1tokYHblse9TTaF0BW1b</string>-->
 
     <!-- Sign In -->
     <string name="email">Email</string>
@@ -30,11 +30,11 @@
     <string name="account">Account</string>
 
     <!-- Account -->
-    <string name="post"></string>
-    <string name="following"></string>
-    <string name="follower"></string>
-    <string name="follow"></string>
-    <string name="follow_cancel"></string>
+    <string name="post">Post</string>
+    <string name="following">Following</string>
+    <string name="follower">Followers</string>
+    <string name="follow">Follow</string>
+    <string name="follow_cancel">Follow cancel</string>
     <string name="profile">Profile</string>
     <string name="count_0">0</string>
 
@@ -48,7 +48,7 @@
     <string name="send">send</string>
 
     <!-- Add Photo -->
-    <string name="upload_image">upload_image</string>
+    <string name="upload_image">Add image</string>
     <string name="hint_image_content">hint_image_content</string>
     <string name="upload_success">upload_success</string>
     <string name="upload_fail">upload_fail</string>
