--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,18 +9,18 @@
     <string name="com.twitter.sdk.android.CONSUMER_SECRET">2Uov8wp8sQWccy1oRRes7Q3VgWfsTE1tokYHblse9TTaF0BW1b</string>-->
 
     <!-- Sign In -->
+
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="signin_email">Signup or Signin by email</string>
-    <string name="signin_google">Google</string>
-    <string name="signin_facebook">Facebook</string>
-    <string name="signin_twitter">Twitter</string>
-    <string name="signup_complete"></string>
-    <string name="signin_complete"></string>
-    <string name="signout">signoutt</string>
-    <string name="signout_success">signout_success</string>
-    <string name="signout_fail">signout_fail</string>
-    <string name="signout_fail_null">signout</string>
+    <string name="signin_google">Google login</string>
+    <string name="signin_facebook">Facebook login</string>
+    <string name="signup_complete">Membership success</string>
+    <string name="signin_complete">Login success</string>
+    <string name="signout">Signout</string>
+    <string name="signout_success">Signout success</string>
+    <string name="signout_fail">Signout fail</string>
+    <string name="signout_fail_null">Please enter your email and password</string>
 
     <!-- Bottom Navigation View -->
     <string name="home">home</string>
@@ -28,24 +28,22 @@
     <string name="gallery">Gallery</string>
     <string name="favorite">Favorite</string>
     <string name="account">Account</string>
-
     <!-- Account -->
     <string name="post">Post</string>
     <string name="following">Following</string>
-    <string name="follower">Followers</string>
+    <string name="follower">Follower</string>
     <string name="follow">Follow</string>
     <string name="follow_cancel">Follow cancel</string>
     <string name="profile">Profile</string>
     <string name="count_0">0</string>
 
     <!-- Alarm -->
-    <string name="alarm_favorite">1.</string>
-    <string name="alarm_who">2&#160;</string>
-    <string name="alarm_comment">3&#160;.</string>
-    <string name="alarm_follow">4.</string>
+    <string name="alarm_favorite">Liked the press</string>
+    <string name="alarm_comment">left a message</string>
+    <string name="alarm_follow">has started to follow your account</string>
 
     <!-- Comment -->
-    <string name="send">send</string>
+    <string name="send">Send</string>
 
     <!-- Add Photo -->
     <string name="upload_image">Add image</string>
